Fix horizontal alignment for metric-rows

--- a/assets/spc-custom-styles.css
+++ b/assets/spc-custom-styles.css
@@ -100,16 +100,31 @@ body {
     display: none;
 }
 
-#Metric1_button, #Metric2_button, #Metric3_button, #Thickness1_button, #Width1_button, #Para1_button, #Metric4_button {
+#Diameter_button,
+#Etch1_button,
+#Film-Thickness_button,
+#Etch2_button,
+#Line-Width_button,
+#Overlay_button,
+#Volume_button {
     padding: 0px 0px;
     color: #95969A;
 }
 
-#Metric1_button:hover, #Metric2_button:hover, #Metric3_button:hover, #Para1_button:hover, #Metric4_button:hover, #Thickness1_button:hover, #Width1_button:hover {
-    color: #FFFFFF;
+.metric-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
 }
 
-#Metric1_OOC_graph > div > div, #Metric2_OOC_graph > div > div, #Metric3_OOC_graph > div > div, #Metric4_OOC_graph > div > div,#Para1_OOC_graph > div > div,#Thickness1_OOC_graph > div > div, #Width1_OOC_graph > div > div, #Metric6_OOC_graph > div > div {
+#Diameter_OOC_graph > div > div,
+#Etch1_OOC_graph > div > div,
+#Film-Thickness_OOC_graph > div > div,
+#Metric4_OOC_graph > div > div,
+#Etch2_OOC_graph > div > div,
+#Line-Width_OOC_graph > div > div,
+#Overlay_OOC_graph > div > div,
+#Volume_OOC_graph > div > div {
     width: 100%;
 }
 
